tests/ui/issues/issue-54062.stderr
error[E0616]: field `state` of struct `Mutex` is private
  --> $DIR/issue-54062.rs:10:24
   |
LL |     let _ = test.comps.state.inner.try_lock();
   |                        ^^^^^ private field

error: aborting due to previous error

For more information about this error, try `rustc --explain E0616`.
